# TE3001B-Robotics-Fundamentals

./: .gitignore  .gitmodules
challenge_3_microcontroller/challenge_3_esp/: challenge_3_esp.ino
challenge_3_microcontroller/publisher_test/: publisher_test.ino
draw_from_speech/: silero_vad_example.py  silero_vad_recorder.py
drawing_processing/: README.md  draw_and_show.bash  drawing_visualizer.py  tkinter_drawer.py
drawing_processing/sketchbook/draw_csv_round/: draw_csv_round.pde
drawing_processing/sketchbook/draw_csv_round/data/: points.csv
jacobian_matrix/: jacobian_matrix.py
jacobian_matrix/simulation_ws/: conf.rviz
jacobian_matrix/simulation_ws/src/jacobian_simulation/: setup.py
jacobian_matrix/simulation_ws/src/jacobian_simulation/jacobian_simulation/: jacobian_infinite.py
manchester_ws/src/challenge_1/: package.xml  setup.cfg  setup.py
manchester_ws/src/challenge_1/challenge_1/: process.py  signal_generator.py
manchester_ws/src/challenge_1/launch/: challenge_launch.py
manchester_ws/src/challenge_2/: package.xml  setup.py
manchester_ws/src/challenge_2/challenge_2/: signal_generator.py  signal_reconstructor.py
manchester_ws/src/challenge_2/config/: params.yaml
manchester_ws/src/challenge_2/launch/: challenge_launch.py
manchester_ws/src/challenge_2_msgs/: CMakeLists.txt  package.xml
manchester_ws/src/challenge_2_msgs/msg/: SignalParameters.msg
motor_pid/speed_logger/: speed_logger.ino
xarm_figure_drawing_ws/src/xarm_as/: CMakeLists.txt  package.xml
xarm_figure_drawing_ws/src/xarm_as/src/: xarm_action_client.cpp  xarm_action_server.cpp
xarm_figure_drawing_ws/src/xarm_as_interfaces/: CMakeLists.txt  package.xml
xarm_figure_drawing_ws/xarm_as/: CMakeLists.txt  package.xml
xarm_figure_drawing_ws/xarm_as_interfaces/: package.xml
